# multi-uav-simulation

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
docs/: useful_commands.md
navigation/include/: global_navigation.hpp  goto_navigation.hpp  local_navigation.hpp
navigation/src/: main.cpp
