<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_uav_simulation</name>
  <version>0.0.1</version>
  <description>Simulation of multi-UAV system in Gazebo with ROS2</description>
  <maintainer email="mateuszzembron@gmail.com">mzembron</maintainer>
  <license>TODO</license>
  
  <depend>px4_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>